[package]
name = "async-tcp"
description = "Traits implementable by async versions of TcpListener and TcpStream"
version = "0.1.0"
homepage = "https://github.com/r3v2d0g/async-tcp"
repository = "https://github.com/r3v2d0g/async-tcp.git"
documentation = "https://docs.rs/async-tcp"
keywords = ["async", "io", "net", "tcp"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"

[features]
async-io = ["async-io_", "async-peek/async-io"]
async-net = ["async-net_", "async-peek/async-net"]

[dependencies]
async-peek = "0.3"
futures-lite = "1.0"

[dependencies.async-io_]
package = "async-io"
version = "0.2"
optional = true
default-features = false

[dependencies.async-net_]
package = "async-net"
version = "1.0"
optional = true
default-features = false

[dev-dependencies]
smol = "0.4"
